--- a/main.css
+++ b/main.css
@@ -54,6 +54,7 @@ body section {
   margin-left: auto;
   margin-right: auto;
   max-width: 1200px;
+  min-height: 100vh;
 }
 body section .section-title {
   color: #06283D;
@@ -136,6 +137,56 @@ body section .content .posts-container .post-card .post-description .date {
 body section .content .posts-container .post-card .post-background {
   width: 100%;
 }
+body section .contact-form .input-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 60px;
+}
+body section .contact-form .input-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+body section .contact-form .input-wrapper label {
+  color: #06283D;
+  margin: 8px 0 8px 12px;
+}
+body section .contact-form .input-wrapper textarea,
+body section .contact-form .input-wrapper input {
+  padding: 14px 18px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  border: none;
+  transition: box-shadow 0.2s ease-in-out;
+  font-size: 1.1em;
+  border-radius: 12px;
+  outline: none;
+  box-sizing: border-box;
+}
+body section .contact-form .input-wrapper textarea::-moz-placeholder, body section .contact-form .input-wrapper input::-moz-placeholder {
+  color: rgba(17, 17, 17, 0.28);
+}
+body section .contact-form .input-wrapper textarea:-ms-input-placeholder, body section .contact-form .input-wrapper input:-ms-input-placeholder {
+  color: rgba(17, 17, 17, 0.28);
+}
+body section .contact-form .input-wrapper textarea::placeholder,
+body section .contact-form .input-wrapper input::placeholder {
+  color: rgba(17, 17, 17, 0.28);
+}
+body section .contact-form .input-wrapper textarea:hover,
+body section .contact-form .input-wrapper input:hover {
+  box-shadow: rgba(149, 157, 165, 0.5) 0px 8px 24px;
+}
+body section .contact-form .input-wrapper textarea:focus,
+body section .contact-form .input-wrapper input:focus {
+  box-shadow: rgba(149, 157, 165, 0.5) 0px 8px 24px;
+}
+body section .contact-form .input-wrapper.content {
+  margin-top: 60px;
+}
+body section .contact-form .input-wrapper.content textarea {
+  resize: vertical;
+  min-height: 180px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
 body footer {
   display: flex;
   flex-direction: column;
@@ -163,12 +214,22 @@ body footer input {
   border: none;
   outline: none;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  padding: 12px 30px;
+  padding: 12px 20px;
   border-radius: 12px;
   width: 100%;
-  max-width: 500px;
+  min-width: 400px;
   color: rgb(133, 133, 133);
   transition: 0.2s ease-in-out;
+  color: black;
+}
+body footer input::-moz-placeholder {
+  color: rgba(17, 17, 17, 0.28);
+}
+body footer input:-ms-input-placeholder {
+  color: rgba(17, 17, 17, 0.28);
+}
+body footer input::placeholder {
+  color: rgba(17, 17, 17, 0.28);
 }
 body footer input:focus, body footer input:hover {
   box-shadow: rgba(149, 157, 165, 0.5) 0px 8px 24px;
