--- a/main.scss
+++ b/main.scss
@@ -79,6 +79,7 @@ body {
         margin-left: auto;
         margin-right: auto;
         max-width: 1200px;
+        min-height: 100vh;
 
         .section-title {
             color: $color_dark_navy_blue;
@@ -186,6 +187,58 @@ body {
                 }
             }
         }
+
+        .contact-form {
+            .input-container {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                gap: 60px;
+            }
+
+            .input-wrapper {
+                display: flex;
+                flex-direction: column;
+                
+                label {
+                    color: $color_dark_navy_blue;
+                    margin: 8px 0 8px 12px;
+                }
+
+                textarea,
+                input {
+                    padding: 14px 18px;
+                    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+                    border: none;
+                    transition: box-shadow .2s ease-in-out;
+                    font-size: 1.1em;
+                    border-radius: 12px;
+                    outline: none;
+                    box-sizing: border-box;
+
+                    &::placeholder {
+                        color: rgba(17, 17, 17, 0.28);
+                    }
+                    
+                    &:hover {
+                        box-shadow: rgba(149, 157, 165, 0.5) 0px 8px 24px;
+                    }
+                    
+                    &:focus {
+                        box-shadow: rgba(149, 157, 165, 0.5) 0px 8px 24px;
+                    }
+                }
+
+                &.content {
+                    margin-top: 60px;
+
+                    textarea {
+                        resize: vertical;
+                        min-height: 180px;
+                        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+                    }
+                }
+            }
+        }
     }
 
     footer {
@@ -217,13 +270,18 @@ body {
             border: none;
             outline: none;
             box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-            padding: 12px 30px;
+            padding: 12px 20px;
             border-radius: 12px;
             width: 100%;
-            max-width: 500px;
+            min-width: 400px;
             color: $dimmed_color_white;
             transition: .2s ease-in-out;
+            color: black;
             
+            &::placeholder {
+                color: rgba(17, 17, 17, 0.28);
+            }
+
             &:focus,
             &:hover {
                 box-shadow: rgba(149, 157, 165, 0.5) 0px 8px 24px;
