--- a/main.scss
+++ b/main.scss
@@ -14,6 +14,34 @@ body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    
+    .button-primary {
+        background-color: $color_dark_navy_blue;
+        border: none;
+        color: $color_white;
+        margin: 0;
+        border-radius: 12px;
+        font-size: 1.3em;
+        padding: 0 12px;
+        cursor: pointer;
+        transition: .2s ease-in-out;
+
+        &:hover {
+            background-color: $color_navy_blue;
+        }
+
+        &.big {
+            padding: 8px 12px;
+            font-size: 1.5em;
+        }
+    }
+
+    .content-center {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 24px 10px;
+    }
 
     header {
         display: flex;
@@ -132,6 +160,7 @@ body {
 
                 .post-background {
                     overflow: hidden;
+                    position: relative;
                     
                     img {
                         height: 100%;
@@ -139,6 +168,51 @@ body {
                         object-position: center;
                         object-fit: cover;
                         transition: .2s ease-in-out;
+                    }
+
+                    .loader-ring {
+                        display: inline-block;
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                        width: 80px;
+                        height: 80px;
+                        z-index: -1;
+                
+                        div {
+                            box-sizing: border-box;
+                            display: block;
+                            position: absolute;
+                            width: 64px;
+                            height: 64px;
+                            margin: 8px;
+                            border: 8px solid $color_light_blue;
+                            border-radius: 50%;
+                            animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+                            border-color: $color_light_blue transparent transparent transparent;
+                
+                            &:nth-child(1) {
+                                animation-delay: -0.45s;
+                            }
+                
+                            &:nth-child(2) {
+                                animation-delay: -0.3s;
+                            }
+                
+                            &:nth-child(3) {
+                                animation-delay: -0.15s;
+                            }
+                        }
+                    }
+                        
+                    @keyframes lds-ring {
+                        0% {
+                        transform: rotate(0deg);
+                        }
+                        100% {
+                        transform: rotate(360deg);
+                        }
                     }
                 }
             }
@@ -183,6 +257,23 @@ body {
 
                     .post-background {
                         width: 100%;
+                    }
+                }
+
+            }
+
+            .more-actions {
+                text-align: center;
+                padding-bottom: 40px;
+
+                a {
+                    color: $color_light_blue;
+                    transition: .2s ease-in-out;
+                    text-decoration: none;
+                    
+                    &:hover {
+                        color: $color_navy_blue;
+                        text-decoration: underline;
                     }
                 }
             }
@@ -261,6 +352,11 @@ body {
         h4 {
             color: $dimmed_color_white;
             margin: 16px 0;
+        }
+
+        .flex-wrapper {
+            display: flex;
+            gap: 10px;
         }
 
         input {
