--- a/main.scss
+++ b/main.scss
@@ -289,12 +289,44 @@ body {
             .input-wrapper {
                 display: flex;
                 flex-direction: column;
+
+                &.dropdown {
+                    position: relative;
+                    select {
+                        display: none;
+                    }
+                }
                 
                 label {
                     color: $color_dark_navy_blue;
                     margin: 8px 0 8px 12px;
                 }
 
+                .dropdown-value {
+                    height: 100%;
+                    cursor: pointer;
+                    display: flex;
+                    align-items: center;
+                    position: relative;
+
+                    &:after {
+                        position: absolute;
+                        content: "";
+                        top: 50%;
+                        transform: translateY(-15%);
+                        right: 15px;
+                        width: 0;
+                        height: 0;
+                        border: 6px solid transparent;
+                        border-color: $color_dark_navy_blue transparent transparent transparent;
+                    }
+
+                    p {
+                        margin: 0;
+                    }
+                }
+
+                .dropdown-value,
                 textarea,
                 input {
                     padding: 14px 18px;
@@ -316,6 +348,76 @@ body {
                     
                     &:focus {
                         box-shadow: rgba(149, 157, 165, 0.5) 0px 8px 24px;
+                    }
+                }
+
+                &.opened {
+                    .dropdown-list {
+                        top: 100%;
+                        z-index: 10000;
+                        opacity: 1;
+                        pointer-events: all;
+                        max-height: 500px;
+                        overflow-y: scroll;
+                    }
+
+                    .dropdown-value {
+                        box-shadow: rgba(149, 157, 165, 0.5) 0px 8px 24px;
+                        border-radius: 12px 12px 0 0;
+                    }
+                }
+
+                .dropdown-list {
+                    position: absolute;
+                    top: 80%;
+                    z-index: -100;
+                    opacity: 0;
+                    pointer-events: none;
+                    list-style-type: none;
+                    margin: 0;
+                    padding: 10px 8px;
+                    background-color: rgb(254, 254, 254);
+                    width: 100%;
+                    box-sizing: border-box;
+                    box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
+                    border-radius: 0 0 12px 12px;
+                    transition: .2s ease-in-out;
+
+                    .dropdown-list-item {
+                        margin: 4px 0;
+                        padding: 10px 14px;
+                        display: flex;
+                        justify-content: flex-start;
+                        align-items: center;
+                        gap: 12px;
+                        color: $color_dark_navy_blue;
+                        cursor: pointer;
+                        width: 100%;
+                        box-sizing: border-box;
+                        border-radius: 10px;
+                        transition: .1s ease-in-out;
+
+                        &.selected {
+
+                            .checkbox {
+                                box-shadow: 0 0 0 2pt $color_light_blue;
+                                border-color: #fff;
+                                background-color: $color_light_blue;
+                            }
+                        }
+
+                        &:hover {
+                            background-color: rgba(238, 238, 238, 0.35);
+                        }
+
+                        .checkbox {
+                            display: block;
+                            width: 12px;
+                            height: 12px;
+                            border-radius: 50%;
+                            border: 2px solid $color_light_blue;
+                            transition: .2s ease-in-out;
+                        }
                     }
                 }
 
