--- a/main.scss
+++ b/main.scss
@@ -14,6 +14,15 @@ body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+
+    .divider {
+        display: block;
+        background-color: $dimmed_color_white;
+        width: 300px;
+        height: 3px;
+        margin: 40px auto 40px auto;
+        box-sizing: border-box;
+    }
     
     .button-primary {
         background-color: $color_dark_navy_blue;
@@ -25,6 +34,11 @@ body {
         padding: 0 12px;
         cursor: pointer;
         transition: .2s ease-in-out;
+
+        &.rectangle {
+            border-radius: 8px;
+            padding: 10px 20px;
+        }
 
         &:hover {
             background-color: $color_navy_blue;
@@ -430,6 +444,47 @@ body {
                         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
                     }
                 }
+            }
+        }
+
+        .about-wrapper {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+
+            .title {
+                width: 100%;
+                text-align: center;
+                
+                &.small {
+                    font-size: 0.9em;
+                    color: $dimmed_color_white;
+                    font-weight: 600;
+                }
+                
+                &.main {
+                    font-size: 1.9em;
+                    color: $color_dark_navy_blue;
+                    margin: 0;
+                }
+            }
+
+            .about-paragraph {
+                line-height: 30px;
+                color: $dimmed_color_white;
+                margin-left: auto;
+                margin-right: auto;
+                margin-top: 0;
+            }
+
+            .button-wrapper {
+                width: 100%;
+                display: flex;
+                align-items: center;
+                gap: 12px;
             }
         }
     }
