--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   padding: 0;
@@ -411,6 +412,149 @@ body section .about-wrapper .button-wrapper {
   display: flex;
   align-items: center;
   gap: 12px;
+}
+body section .post-header {
+  text-align: center;
+  padding: 20px;
+  padding-top: 80px;
+  margin-left: auto;
+  margin-right: auto;
+}
+body section .post-header .title {
+  font-size: 2.5em;
+  margin: 0;
+  margin-top: 9px;
+  margin-bottom: 12px;
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+}
+body section .post-header .sub-title {
+  color: rgb(133, 133, 133);
+  max-width: 920px;
+  margin-left: auto;
+  margin-right: auto;
+  letter-spacing: 1.2px;
+  margin-bottom: 40px;
+  font-size: 1.2em;
+}
+body section .post-header img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  max-height: 600px;
+}
+body section .info-wrapper {
+  padding: 8px 28px;
+  padding-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+body section .info-wrapper .author-info {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+  margin: 0;
+  padding: 0;
+}
+body section .info-wrapper .author-info img {
+  width: 50px;
+  height: 50px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
+}
+body section .info-wrapper .author-info .description {
+  display: grid;
+  align-items: center;
+  gap: 5px;
+}
+body section .info-wrapper .author-info .description .name {
+  font-size: 1.2em;
+  color: #06283D;
+  margin: 0;
+}
+body section .info-wrapper .author-info .description .spot {
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  margin: 3px;
+  margin-bottom: 3px;
+  background-color: rgb(133, 133, 133);
+  border-radius: 50%;
+}
+body section .info-wrapper .author-info .description .details {
+  color: rgb(133, 133, 133);
+  margin: 0;
+}
+body section .info-wrapper .button-wrapper {
+  display: flex;
+  gap: 10px;
+}
+body section .info-wrapper .button-wrapper button {
+  border: 1px solid rgb(133, 133, 133);
+  background-color: transparent;
+  font-size: 1.2em;
+  padding: 8px 10px;
+  border-radius: 8px;
+}
+body section .info-wrapper .button-wrapper button i.mr {
+  margin-right: 8px;
+}
+body section .post-content {
+  padding: 18px 28px 80px 28px;
+  display: flex;
+  gap: 10px;
+}
+body section .post-content .headlines {
+  flex: 2;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+body section .post-content .headlines .headlines-title {
+  color: rgb(133, 133, 133);
+  font-size: 0.8em;
+}
+body section .post-content .headlines li {
+  margin: 12px 0;
+  font-weight: 500;
+  color: #06283D;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+body section .post-content .headlines li.active {
+  background-color: #eee;
+  font-weight: 700;
+}
+body section .post-content .text-content {
+  flex: 5;
+}
+body section .post-content .text-content .text {
+  height: auto;
+  display: flex;
+  font-weight: 500;
+}
+body section .post-content .text-content .text .highlight {
+  display: block;
+}
+body section .post-content .text-content .text p {
+  margin: 18px;
+  font-size: 1.2em;
+}
+body section .post-content .text-content .text.highlighted {
+  font-weight: 700;
+  position: relative;
+  padding-left: 20px;
+  box-sizing: border-box;
+  border-left: 8px solid #1746A2;
+  padding-left: 0px;
+  margin-left: 18px;
+}
+body section .post-content .text-content .text.highlighted p {
+  margin-left: 15px;
 }
 body footer {
   display: flex;
